# Fall2025SeniorProject

./: .gitmodules  README.MD
CodeRobot/: CMakeLists.txt
CodeRobot/src/: README.txt  beg.c  i2c.c  i2c2.c  main.c  readEn.c
CodeTesting/A_STAR/: CustomMap.c  customA.c  customGen  hash.c  main  main.c  practice_map.txt
CodeTesting/CUSTOMLIB/: .gitignore  VLX.c  VLX.h  main.c
CodeTesting/GPIO/: Control.c  Controlexe.c  gpio.c  i2cdetect.c
CodeTesting/GY521_MPU5/: GY521.c  GY521.h  main.c
CodeTesting/HASH_MAP/: hash_map.txt  main  main.c
CodeTesting/I2C/: i2ctest.c  this.c
CodeTesting/I2C_API/: VL53L0X.c  VL53L0X.h  VL53L0X_WP.c  main.c
CodeTesting/IR_SENSOR/: README.md  ir.c  ir.h  main.c  timing.c
CodeTesting/LIBGPIOD/: gpio.c  main.c  test.c
CodeTesting/NETWORKINGTESTING/: .gitignore  main.c  res  sen  tcpr.c  tcps.c
CodeTesting/RAYLIB/: CMakeLists.txt  main.c
CodeTesting/RAYLIB/.cache/clangd/index/: main.c.5D98BE914A26D3BA.idx  main.c.FCB8B12DEF6890D8.idx
CodeTesting/RAYLIB/src/: main.c  move.c  obstacle.c  obstical.c
CodeTesting/S_R_D/: cleanup.c  rec.c  res  send.c
CodeUser/: CMakeLists.txt  README.md  readme.txt  test
CodeUser/.cache/clangd/index/: RAYLIB_Test.c.C835DA4568A51164.idx  cgltf.h.EF57F37ECA74D76D.idx  cocoa_init.m.04C8CA3312A49916.idx  cocoa_joystick.h.039DB4467227FDB6.idx  cocoa_joystick.m.FBA23990ADD17002.idx  cocoa_monitor.m.174A709A5E7AE68F.idx  cocoa_platform.h.BCC36D94C3B4ADD7.idx  cocoa_time.c.70B03AA61FB1F117.idx  cocoa_time.h.5BFB86C3AA3CBA2E.idx  cocoa_window.m.BC83521516C4BF78.idx  config.h.4DB4EF950AD3E3EC.idx  context.c.E57D026F4730B9D5.idx  dr_mp3.h.8B0DDA4D4DA27104.idx  dr_wav.h.303184F917E426AD.idx  egl_context.c.F140A36FDEFA3C20.idx  glad.h.49DCFC52853D10A9.idx  glfw3.h.39CEC16B3CC36153.idx  glfw3native.h.50F7D92CB3417926.idx  hash.c.89ABB439C6794D86.idx  init.c.ED61FCCD7197D045.idx  input.c.8A8AFB5EEED12C51.idx  internal.h.DB4F5E506DF6047B.idx  jar_mod.h.B1F8371190A3F03E.idx  jar_xm.h.F64EE770F01194A8.idx  m3d.h.24A545AF6E3E811B.idx  main.c.6CF7EACBB73936DF.idx  mappings.h.EA64A2A10E907EAD.idx  miniaudio.h.49D0770BAC6FF0D3.idx  monitor.c.B37957F55DBDA8EB.idx  msf_gif.h.80549F6E9AD43483.idx  nsgl_context.m.F40C7EC32A470DD1.idx  null_init.c.3B566846514DA9EB.idx  null_joystick.c.278BA7FE961216CD.idx  null_joystick.h.D0FE4EA8C21D72DB.idx  null_monitor.c.54F0141AC93F6210.idx  null_platform.h.8C93D7A2ACB3EBDF.idx  null_window.c.DF32B293AAD23238.idx  osmesa_context.c.80526CB51DEDC488.idx  par_shapes.h.93FA29C8F3F1E547.idx  platform.c.7226880029FB832C.idx  (+37 more)
CodeUser/MapGen/: Map_Generator.c  a.out  main  map.txt
CodeUser/src/: A_Star_Test.c  RAYLIB_Test.c  hash.c  main.c  map.txt  map2.txt  map3.txt
dylanMain/: .main.c.swp  Makefile  main.c  main_alt.c  stop.c
main/: README.md
(+26 files in other folders)
